Project rainbow {
  database_type: 'PostgreSQL'
  Note: 'Relational Database for Rainbow Data Platform'
}

enum discount_type {
  PERCENTAGE
  FIXED
}

enum user_role {
  USER
  ADMIN
}

Table users {
  id uuid [primary key]
  email varchar(255) [unique, not null]
  password varchar(255) [not null, note: 'CHECK (LENGTH(password) > 6 AND LENGTH(password) <= 255)']
  first_name varchar(255) [not null, note: 'CHECK (LENGTH(first_name) > 0 AND LENGTH(first_name) <= 255)']
  last_name varchar(255) [not null, note: 'CHECK (LENGTH(last_name) > 0 AND LENGTH(last_name) <= 255)']
  last_login timestamp [default: null]
  is_active bool [default: true, not null]
  phone_number varchar(255) [not null, note: 'CHECK (LENGTH(phone_number) = 10)']
  role user_role [default: 'USER', not null, note: 'USER, ADMIN']
  created_at timestamp [default: `current_timestamp`, not null]
  updated_at timestamp [default: `current_timestamp`, not null]
  deleted_at timestamp [default: null]
}

Table authors {
  id uuid [primary key]
  secondary_id varchar(255) [unique, default: null]
  name varchar(255) [not null, note: 'CHECK (LENGTH(name) > 0 AND LENGTH(name) <= 255)']
  slug varchar(255) [not null, note: 'CHECK (LENGTH(slug) > 0 AND LENGTH(slug) <= 255)']
  created_at timestamp [default: `current_timestamp`, not null]
  updated_at timestamp [default: `current_timestamp`, not null]
  deleted_at timestamp [default: null]
}

Table sellers {
  id uuid [primary key]
  secondary_id varchar(255) [unique, default: null]
  name varchar(255) [not null, note: 'CHECK (LENGTH(name) > 0 AND LENGTH(name) <= 255)']
  link varchar(255) [not null]
  logo varchar(255) [null]
  created_at timestamp [default: `current_timestamp`, not null]
  updated_at timestamp [default: `current_timestamp`, not null]
  deleted_at timestamp [default: null]
}

Table categories {
  id uuid [primary key]
  secondary_id varchar(255) [unique, default: null]
  name varchar(255) [not null, note: 'CHECK (LENGTH(name) > 0 AND LENGTH(name) <= 255)']
  slug varchar(255) [not null, note: 'CHECK (LENGTH(slug) > 0 AND LENGTH(slug) <= 255)']
  created_at timestamp [default: `current_timestamp`, not null]
  updated_at timestamp [default: `current_timestamp`, not null]
  deleted_at timestamp [default: null]
}

Table books {
  id uuid [pk]
  secondary_id varchar(255) [unique, default: null]
  category_id uuid [ref: > categories.id, not null]
  seller_id uuid [ref: > sellers.id, not null]
  name varchar(255) [not null, note: 'CHECK (LENGTH(name) > 0 AND LENGTH(name) <= 255)']
  description text [default: null]
  price decimal(10, 2) [not null, note: 'CHECK (price >= 0)']
  original_price decimal(10, 2) [note: 'CHECK (original_price >= 0 AND original_price >= price)']
  rating_average decimal(2, 1) [note: 'CHECK (rating_average BETWEEN 0 AND 5)']
  review_count int [note: 'CHECK (review_count >= 0)']
  page_count int [note: 'CHECK (page_count >= 0)']
  sold_count int [default: 0, not null, note: 'CHECK (sold_count >= 0)']
  created_at timestamp [default: `current_timestamp`, not null]
  updated_at timestamp [default: `current_timestamp`, not null]
  deleted_at timestamp [default: null]
}

Table book_authors {
  id uuid [pk]
  book_id uuid [ref: > books.id, null]
  author_id uuid [ref: > authors.id, null]
  created_at timestamp [default: `current_timestamp`, not null]
  updated_at timestamp [default: `current_timestamp`, not null]
  deleted_at timestamp [default: null]
}

Table payments {
  id uuid [pk, default: `UUID_GENERATE_V4()`]
  method varchar(20) [not null]
  created_at timestamp [default: `current_timestamp`, not null]
  updated_at timestamp [default: `current_timestamp`, not null]
  deleted_at timestamp [default: null]
}

Table orders {
  id uuid [pk]
  user_id uuid [ref: > users.id, not null]
  payment_id uuid [ref: > payments.id, not null]
  promotion_id uuid [ref: > promotions.id, null]
  shipping_address varchar [not null]
  total_amount decimal(10, 2) [not null, note: 'CHECK (total_amount >= 0)']
  created_at timestamp [default: `current_timestamp`, not null]
  updated_at timestamp [default: `current_timestamp`, not null]
  deleted_at timestamp [default: null]
}

Table order_items {
  id uuid [pk]
  order_id uuid [ref: > orders.id, not null]
  book_id uuid [ref: > books.id, not null]
  quantity int [not null, note: 'CHECK (quantity > 0)']
  unit_price decimal(10, 2) [not null, note: 'CHECK (unit_price >= 0)']
  discount decimal(10, 2) [default: 0, not null, note: 'CHECK (discount >= 0)']
  created_at timestamp [default: `current_timestamp`, not null]
  updated_at timestamp [default: `current_timestamp`, not null]
  deleted_at timestamp [default: null]
}

Table inventories {
  id uuid [pk]
  book_id uuid [ref: > books.id, unique, not null]
  stock int [not null, note: 'CHECK (stock >= 0)']
  last_restocked_at timestamp [default: `current_timestamp`, not null]
  created_at timestamp [default: `current_timestamp`, not null]
  updated_at timestamp [default: `current_timestamp`, not null]
  deleted_at timestamp [default: null]
}

Table promotions {
  id uuid [pk]
  name varchar(100) [not null]
  discount_type discount_type [not null]
  discount_value decimal(10, 2) [not null, note: 'CHECK (discount_value >= 0)']
  start_date timestamp [not null]
  end_date timestamp [not null, note: 'CHECK (end_date > start_date)']
  max_uses int [not null, note: 'CHECK (max_uses >= 0)']
  used_count int [default: 0, not null]
  created_at timestamp [default: `current_timestamp`, not null]
  updated_at timestamp [default: `current_timestamp`, not null]
  deleted_at timestamp [default: null]
}

Table user_promotions {
  id uuid [pk]
  user_id uuid [ref: > users.id, not null]
  promotion_id uuid [ref: > promotions.id, not null]
  used_at timestamp [default: `current_timestamp`, not null]
  created_at timestamp [default: `current_timestamp`, not null]
  updated_at timestamp [default: `current_timestamp`, not null]
  deleted_at timestamp [default: null]
  indexes {
    (user_id, promotion_id) [unique]
  }
}
